[gd_scene load_steps=11 format=3 uid="uid://cpf7lpkecajsj"]

[ext_resource type="Script" path="res://player/billy/scripts/player.gd" id="1_npgok"]
[ext_resource type="Texture2D" uid="uid://bqe7kmpjqj8wl" path="res://player/billy/sprites/fartso_shooting.png" id="2_n5187"]
[ext_resource type="PackedScene" uid="uid://csgqsgkkupe3t" path="res://ui/popups/scenes/floating_text.tscn" id="3_h5rq5"]
[ext_resource type="Texture2D" uid="uid://d1iultmrn1nlf" path="res://player/billy/sprites/fartso.png" id="3_mpka3"]
[ext_resource type="PackedScene" uid="uid://nwdm5d7fqktt" path="res://weapon_slot.tscn" id="4_cim7x"]
[ext_resource type="PackedScene" uid="uid://lk2vw3cu6yct" path="res://hurtbox.tscn" id="6_50x5i"]
[ext_resource type="PackedScene" uid="uid://b05b3xtw1fnij" path="res://health_component.tscn" id="7_agd2y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_degn2"]
size = Vector2(7, 4)

[sub_resource type="SpriteFrames" id="SpriteFrames_fyxop"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_mpka3")
}],
"loop": true,
"name": &"fly",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_n5187")
}],
"loop": false,
"name": &"shoot",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ma8x0"]
size = Vector2(7, 8)

[node name="Player" type="CharacterBody2D"]
wall_min_slide_angle = 1.74533
script = ExtResource("1_npgok")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_degn2")

[node name="WeaponSlot" parent="." instance=ExtResource("4_cim7x")]
position = Vector2(0, -4)

[node name="Farticles" type="CPUParticles2D" parent="."]
amount = 30
lifetime = 1.4
randomness = 0.4
lifetime_randomness = 0.55
emission_shape = 1
emission_sphere_radius = 2.99
direction = Vector2(0, -1)
spread = 21.37
gravity = Vector2(0, 50)
initial_velocity_min = 20.0
initial_velocity_max = 40.0
color = Color(0.34902, 0.756863, 0.207843, 1)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_fyxop")
animation = &"shoot"
autoplay = "fly"

[node name="FloatingText" parent="." instance=ExtResource("3_h5rq5")]
position = Vector2(1, -6)

[node name="Hurtbox" parent="." instance=ExtResource("6_50x5i")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_ma8x0")

[node name="HealthComponent" parent="." instance=ExtResource("7_agd2y")]
health = 69.0

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
